...
            "state" : "translated",
            "value" : "侧面"
          }
        }
      }
    },
    "保存" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "保存"
          }
...
            "state" : "translated",
            "value" : "加载更多"
          }
        }
      }
    },
    "千与千寻" : {
      "extractionState" : "stale",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "千与千寻"
...
            "state" : "translated",
            "value" : "原名"
          }
        }
      }
    },
    "取消" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "取消"
          }
...
            "state" : "translated",
            "value" : "只能调整相同观看年月内的作品顺序。"
          }
        }
      }
    },
    "只能调整相同评分内的作品顺序。" : {
      "extractionState" : "stale",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "只能调整相同评分内的作品顺序。"
...
            "state" : "translated",
            "value" : "季度名"
          }
        }
      }
    },
    "完成" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "完成"
          }
...
        }
      }
    },
    "按季选择" : {

    },
    "排序" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "排序"
          }
...
            "state" : "translated",
            "value" : "排序完成后可进入时光机"
          }
        }
      }
    },
    "排行" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "排行"
          }
...
            "state" : "translated",
            "value" : "无法保存 Keychain 凭据（%d）。"
          }
        }
      }
    },
    "无法移动" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "无法移动"
          }
...
            "state" : "translated",
            "value" : "未命名"
          }
        }
      }
    },
    "未设置" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "未设置"
          }
...
            "state" : "translated",
            "value" : "未设置观看年月"
          }
        }
      }
    },
    "未评" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "未评"
          }
...
            "state" : "translated",
            "value" : "评分"
          }
        }
      }
    },
    "评分排行榜" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "评分排行榜"
          }
...
